3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

server/gods.c: modify god_enchants_weapon() to increase item_power of weapon
  by 1 each time god improves it.  This make sense, but also fixes bug
  1696807 - if the weapon has item_power 0, when player logs on, game
  will calculate new item power, which may be quite surprising to
  character.  If item_power is set, new item_power won't be calculated.
  Note: For trunk, item_power was not recalculated, but I think the changing
  of item_power is just good for some balance.
MSW 2007-09-27

Fix some hiscore changes - some functions were not passing in quiet flag
when they should have been, etc.
--
server/apply.c: Remove some code that sees if player can save - update_score()
  does this, so no reason to have it in both places.
server/hiscore.c: Add check not to save 0 scores.
server/login.c: Be quiet for backup saves.
server/server.c: Be quiet for backup saves.
---
MSW 2007-09-27

Face/animation related plugin functions.
---
Enable a plugin to find a face, and change face or animation. Make property
  name coherent with others.
 include/plugin.h sproto.h
 plugins/cfanim/cfanim.c
 server/plugins.c
---
Add wrapper for find_face().
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Add Object.AnimSpeed and Object.Anim, fix face handling.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
---
Add Crossfire.FindFace() and Crossfire.FindAnimation()
 plugins/cfpython/cfpython.c
---
 doc/Developers/python.ps: updated
Nicolas Weeger 2007-09-27

Couple bug fixes related to 1713188 - dropall performance issues.
---